Release 0.011:
	
Release 0.010:

	* Merged in Keith Dunwoody's patch for merging PORTABLED and MAPD.
	  (New hooks for MOBILEs are included in that patch)
	* Added Jay Shaffstall's patch for escape character codes in UNQ
	parsers.
	* Added MOBILED to track mobiles
	* Updated some zone-related commands to save zones across reboots
	and to create objects in the current zone by default (@new_port,
	@new_room).
	* New @list_mob command to list mobiles by number
	* New @delete_mob command can delete mobiles without accompanying
	user objects.  Note that this can leave bodies behind.
	* @stat command now works on mobiles
	* UNQ DTD error handling now can accept a filename
	* A basic mobfile is now saved like the roomfile and zonefile.  It
	still needs more work before it can be restored, though.
	* Mobiles now have a binder file
	* There is an "unq" builtin type when UNQ parsing for freeform UNQ
	content
	* The %compile command will append a ".c" to the supplied filename
	if the file as mentioned doesn't exist, but the same name with a
	".c" exists and is at least one byte long.
	* There is a @new_mobile command to create a new mobile
	* Added help for new mobile commands
	* UNQ DTDs can now import other DTD's.
	* Improved UNQ DTD type inheritance.
	* The mobfile can now be restored.
	* @new_zone command to add new zones
	* wandering mobiles now work
	* Builtin 'unq' data now works properly
	* A basic sould is in place
	* A "social" command allows socials to be used, slightly awkwardly
	